<?xml version="1.0" encoding="utf-8"?><!--
    TaskEditBottomSheetDialog layout for editing tasks.

    Supports two task types:
    - Single task: A single task
    - Group task: A task group with subtasks

    UI behavior:
    - When editing a Single task: show single task section, hide group task with subtask section
    - When editing a Group task: show group task with subtask section, hide single task section.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:minHeight="300dp"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:text="@string/title_task_edit_bottom_sheet"
        android:textColor="@color/color_bottom_sheet_title_text"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Single Task Section -->
    <LinearLayout
        android:id="@+id/linearLayoutSingleTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxSingleTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|top"
            android:clickable="true"
            android:padding="5dp"
            app:buttonTint="@color/secondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etTaskDescriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_single_task_description_task_edit_bottom_sheet"
            app:hintTextColor="@color/color_textInputLayout_hint_text_focus">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTaskDescriptionTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textColor="@color/text_color_tertiary" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <!-- Group Task with Subtasks Section -->
    <!-- Group Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkBoxGroupTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|top"
            android:clickable="true"
            android:padding="5dp"
            android:visibility="gone"
            app:buttonTint="@color/secondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etGroupTaskDescriptionTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_group_task_description_task_edit_bottom_sheet"
            app:hintTextColor="@color/color_textInputLayout_hint_text_focus">

            <!-- Limit to 4 lines to prevent the EditText from expanding too much -->
            <!-- and pushing other UI elements (buttons, subtasks) off the screen -->
            <!-- in both portrait and landscape orientations. -->
            <!-- But ultimately the number of lines is adjusted programmatically in the code
            depending on the portrait and landscape modes.-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGroupDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:imeOptions="actionNext"
                android:maxLines="4"
                android:textColor="@color/text_color_tertiary"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Subtasks Section -->
        <LinearLayout
            android:id="@+id/groupSubtasksLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textViewSubtask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_subtasks_task_edit_bottom_sheet"
                android:textColor="@color/color_bottom_sheet_title_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/subtaskRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addSubtaskButton"
                style="@style/OutlinedButton.MyNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/action_add_subtask_task_edit_bottom_sheet" />
        </LinearLayout>


        <!-- Section of cancel and save buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                style="@style/OutlinedButton.MyNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/action_cancel_task_edit_bottom_sheet" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveButton"
                style="@style/SolidButton.MyNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_save_task_edit_bottom_sheet" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>